fixat bättre align på input + text i battleview

--- a/src/components/SelectFighter.css
+++ b/src/components/SelectFighter.css
@@ -24,8 +24,7 @@
 @media only screen and (min-width: 1025px){
 	.select-fighter-form{
 		display: flex;
-		margin-top: 0em;
-	
+		margin-top: 1.3rem;
 		
 	}
 	
@@ -33,6 +32,7 @@
 		width: 20vw;
 		margin-left: 5%;
 		margin-right: 0;
+		margin-bottom: 0;
 	}
 
 	.select-fighter-label{
@@ -43,8 +43,8 @@
 	}
 	.description-text-desktop{
 		display: block;
-		width: 15em;
-		text-align: center;
-		margin-left: 15px;
+		width: 18rem;
+		height: 2rem;
+		margin-left: 4rem;
 	}
 }
